--- a/config/default.json.sample
+++ b/config/default.json.sample
@@ -5,8 +5,8 @@
     "dbName": "drinkclub"
   },
   "Maps":{
-    "apiKey": "AIzaSyDLCk0VQb8VxvHJv1EO461f8zzNr6zDpXc",
+    "apiKey": "",
     "baseUrl": "https://maps.googleapis.com/maps/api/geocode/json",
-    "publicApiKey":"AIzaSyB5YPSw55H2etgETahNdeMSo_0Pm5VjrUs"
+    "publicApiKey":""
   }
 }
