--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "scripts": {
     "start": "node_modules/.bin/nodemon ./bin/www",
-    "build": "node_modules/.bin/gulp "
+    "build": "npm run clean && gulp ",
+    "clean":"node_modules/.bin/gulp clean"
   },
   "dependencies": {
     "body-parser": "^1.17.2",
-    "bootstrap": "^3.3.7",
+    "bootstrap": "^4.0.0-beta",
     "config": "^1.26.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
@@ -19,10 +20,12 @@
     "mongodb": "^2.2.31",
     "mongoose": "^4.11.9",
     "morgan": "~1.8.1",
+    "popper.js": "^1.12.5",
     "serve-favicon": "~2.4.2"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
+    "gulp-clean": "^0.3.2",
     "nodemon": "^1.12.0"
   }
 }
