--- a/config/default.json.sample
+++ b/config/default.json.sample
@@ -2,9 +2,9 @@
   "MongoDB": {
     "host": "localhost",
     "port": 27017,
-    "dbName": "drinkclub"
+    "dbName": ""
   },
-  "Maps":{  
+  "Maps":{
     "defaultCenterCoords": {"lat":34.096982 , "lng":-118.105444},
     "apiKey": "",
     "baseUrl": "https://maps.googleapis.com/maps/api/geocode/json",
