--- a/package.json
+++ b/package.json
@@ -12,16 +12,19 @@
     "body-parser": "^1.17.2",
     "bootstrap": "^4.0.0-beta",
     "config": "^1.26.2",
+    "connect-redis": "^3.3.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "ejs": "^2.5.7",
     "express": "~4.15.2",
+    "express-session": "^1.15.5",
     "jquery": "^3.2.1",
     "material-design-icons-iconfont": "^3.0.3",
     "mongodb": "^2.2.31",
     "mongoose": "^4.11.9",
     "morgan": "~1.8.1",
     "popper.js": "^1.12.5",
+    "redis": "^2.8.0",
     "serve-favicon": "~2.4.2"
   },
   "devDependencies": {
