--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-session": "^1.15.5",
     "jquery": "^3.2.1",
     "material-design-icons-iconfont": "^3.0.3",
+    "method-override": "^2.3.10",
     "mongodb": "^2.2.31",
     "mongoose": "^4.11.9",
     "morgan": "~1.8.1",
