--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongodb": "^2.2.31",
     "mongoose": "^4.11.9",
     "morgan": "~1.8.1",
+    "numeral": "^2.0.6",
     "popper.js": "^1.12.5",
     "redis": "^2.8.0",
     "serve-favicon": "~2.4.2"
